deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-processor-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-processor-service
  template:
    metadata:
      labels:
        app: task-processor-service
    spec:
      containers:
        - name: task-processor-service
          image: jonathan12352/msassessmenttaskprocessorservice:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: task-processor-service
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  selector:
    app: task-processor-service
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-management-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-management-service
  template:
    metadata:
      labels:
        app: task-management-service
    spec:
      containers:
        - name: task-management-service
          image: jonathan12352/msassessmenttaskmanagementservice:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: task-management-service
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  selector:
    app: task-management-service
  ports:
    - port: 80
